# ppp-openmp-assessment

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  REFLECTION.md  answers.csv  evaluate.pbs  expected_output.txt  integrate.cpp  integrate.h  integrate_serial.cpp  questions.md  tables.csv
.github/actions/collect-untracked/: action.yml
.github/scripts/: check_language.py
.github/workflows/: ci.yml
